added cv file, updated job descriptions

--- a/index.html
+++ b/index.html
@@ -194,25 +194,27 @@
                 <h5>Palatine Analytics</h5>
                 <span class="date">May 2016 - Present</span>
                 <h6>Full-Stack Developer</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.  </p>
+                <p>Palatine Analytics is an Harvard based start-up, which created an advanced employee evaluation software that enables companies to improve performance reviews</p>
+                <p>I designed and built their public website, which is fully responsive and incorporates modern design features. Currently, I am working on product improvement, adding new features, testing and fixing bugs. Most of the coding is done in latest Javascript (ES6) using full-stack Meteor framework</p>
               </div>
             </div>
             <div class="timeline-block">
               <span class="timeline-point"></span>
               <div class="timeline-block-content">
-                <h5>Palatine Analytics</h5>
-                <span class="date">May 2016 - Present</span>
+                <h5>City Continental Credit</h5>
+                <span class="date">August 2016 - Present</span>
                 <h6>Full-Stack Developer</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut eninisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste </p>
+                <p>CCloan is a leading microfinance company in Geogria, which is alo present in Ukraine and Kazakhstan.</p>
+                <p>I built three fully responsive websites for the company, Currently, I am working on server-side optimization for their credit managment module.</p>
               </div>
             </div>
             <div class="timeline-block">
               <span class="timeline-point"></span>
               <div class="timeline-block-content">
-                <h5>Palatine Analytics</h5>
+                <h5>Freelancer</h5>
                 <span class="date">May 2016 - Present</span>
                 <h6>Full-Stack Developer</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore e </p>
+                <p>I work on freelance projects on regular basis, mostly using NodeJs/Meteor and React.</p>
               </div>
             </div>
           </div>
@@ -264,16 +266,12 @@
     </section>
     
     <footer id="footer">
-      <a href="#" class="btn-download">
+      <a href="GiorgiRostomashviliResume.pdf" class="btn-download">
         Download Résumé  <i class="fa fa-download"></i>
       </a>
     </footer>
     
-    <aside class="go-top">
-      <a href="#about">
-        <i></i>
-      </a>
-    </aside>
+
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
