--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <div class="timeline-block">
               <span class="timeline-point"></span>
               <div class="timeline-block-content">
-                <h5>City Continental Credit</h5>
+                <h5>Continental City Loan</h5>
                 <span class="date">August 2016 - Present</span>
                 <h6>Full-Stack Developer</h6>
                 <p>CCloan is a leading microfinance company in Geogria, which is alo present in Ukraine and Kazakhstan.</p>
