--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Giorgi Rostomashvili - Web Developer</title>
 
+    <link rel="icon" sizes="16x16 32x32" href="/img/favicon.ico">
+
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
