changes to head

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta http-equiv="author" content="Giorgi Rostomashvili"/>
+    <meta name="description" content="Giorgi Rostomashvili is a Freelance Full-Stack Javascript developer"/>
+    <meta name="keywords" content="Giorgi Rostomashvili, Giorgi, Rostomashvili, GiorgiRostomashvili.com, Freelance, Web Developer, Personal Website, Javascript, Full-Stack, Developer"/>
+
     <title>Giorgi Rostomashvili - Web Developer</title>
 
     <link rel="icon" sizes="16x16 32x32" href="/img/favicon.ico">
