--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
           </div>
           <div class="social">
             <ul>
-              <li><a href=""><i class="fa fa-github"></i></a></li>
-              <li><a href=""><i class="fa fa-linkedin"></i></a></li>
-              <li><a href=""><i class="fa fa-twitter"></i></a></li>
-              <li><a href=""><i class="fa fa-facebook"></i></a></li>
-              <li><a href=""><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://github.com/grosto"><i class="fa fa-github"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/giorgirostomashvili"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://twitter.com/RostoG"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://www.facebook.com/giorgi.rostomashvili.23"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://www.instagram.com/giorgirostomashvili/"><i class="fa fa-instagram"></i></a></li>
             </ul>
           </div>
         </div>
