changes to text in resume and index

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 <h5>Continental City Loan</h5>
                 <span class="date">August 2016 - Present</span>
                 <h6>Full-Stack Developer</h6>
-                <p>CCloan is a leading microfinance company in Geogria, which is alo present in Ukraine and Kazakhstan.</p>
+                <p>Continental City Loan is a leading microfinance company in Geogria, which is alo present in Ukraine and Kazakhstan.</p>
                 <p>I built three fully responsive websites for the company, Currently, I am working on server-side optimization for their credit managment module.</p>
               </div>
             </div>
