fixed some typos

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <h5>Palatine Analytics</h5>
                 <span class="date">May 2016 - Present</span>
                 <h6>Full-Stack Developer</h6>
-                <p>Palatine Analytics is an Harvard based start-up, which created an advanced employee evaluation software that enables companies to improve performance reviews</p>
+                <p>Palatine Analytics is an Harvard based startup, which created an advanced employee evaluation software that enables companies to improve performance reviews</p>
                 <p>I designed and built their public website, which is fully responsive and incorporates modern design features. Currently, I am working on product improvement, adding new features, testing and fixing bugs. Most of the coding is done in latest Javascript (ES6) using full-stack Meteor framework</p>
               </div>
             </div>
@@ -210,8 +210,8 @@
                 <h5>Continental City Loan</h5>
                 <span class="date">August 2016 - Present</span>
                 <h6>Full-Stack Developer</h6>
-                <p>Continental City Loan is a leading microfinance company in Geogria, which is alo present in Ukraine and Kazakhstan.</p>
-                <p>I built three fully responsive websites for the company, Currently, I am working on server-side optimization for their credit managment module.</p>
+                <p>Continental City Loan is a leading micro-finance company in Georgia, which is also present in Ukraine and Kazakhstan.</p>
+                <p>I built three fully responsive websites for the company, Currently, I am working on server-side optimization for their credit management module.</p>
               </div>
             </div>
             <div class="timeline-block">
