--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta http-equiv="author" content="Giorgi Rostomashvili"/>
     <meta name="description" content="Giorgi Rostomashvili is a Freelance Full-Stack Javascript developer"/>
     <meta name="keywords" content="Giorgi Rostomashvili, Giorgi, Rostomashvili, GiorgiRostomashvili.com, Freelance, Web Developer, Personal Website, Javascript, Full-Stack, Developer"/>
@@ -13,19 +12,10 @@
 
     <link rel="icon" sizes="16x16 32x32" href="/img/favicon.ico">
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/main.css">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" href="sass/main.scss">
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -43,65 +33,48 @@
         <a href="#about"><i class="fa fa-arrow-circle-down"></i></a>
       </div>
     </header>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#about">About</a></li>
-            <li><a href="#technical-skills">Skills</a></li>
-            <li><a href="#work-experience">Exprience</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#footer">Download Résumé</a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
+    <nav class="navbar">
+      <ul class="nav navbar-nav">
+        <li><a href="#about">About</a></li>
+        <li><a href="#technical-skills">Skills</a></li>
+        <li><a href="#work-experience">Exprience</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#footer">Download Résumé</a></li>
+      </ul>
     </nav>
 
     <section id="about">
       <div class="about">
         <div class="container">
-          <div class="row">
-            <div class="col-sm-6 text-center">
-              <img src="img/profile.jpg" alt="Profile Image" class="img-responsive">
+          <div class="profile-phoot-container">
+            <img src="img/profile.jpg" alt="Profile Image" class="img-responsive">
+          </div>
+          <div class="col-sm-6">
+            <div class="intro">
+              <span class="hello">Hello</span>
+              <h4>I‘m <span class="text-bold">Giorgi Rostomashvili</span></h4>
+              <h5>Full-Stack Javascript Developer</h5>
             </div>
-            <div class="col-sm-6">
-              <div class="intro">
-                <span class="hello">Hello</span>
-                <h4>I‘m <span class="text-bold">Giorgi Rostomashvili</span></h4>
-                <h5>Full-Stack Javascript Developer</h5>
+            <div class="contact">
+              <div class="single-contact">
+                <span class="text-bold">E-mail</span>
+                <span>rostogiorgi@gmail.com</span>
               </div>
-              <div class="contact">
-                <div class="single-contact">
-                  <span class="text-bold">E-mail</span>
-                  <span>rostogiorgi@gmail.com</span>
-                </div>
-                <div class="single-contact">
-                  <span class="text-bold">Phone</span>
-                  <span>(995) 597 105 879</span>
-                </div>
-                <div class="single-contact">
-                  <span class="text-bold">Address</span>
-                  <span>13 Dolidze str, Tbilisi, Georgia</span>
-                </div>
-                <div class="single-contact">
-                  <span class="text-bold">Age</span>
-                  <span>23</span>
-                </div>
+              <div class="single-contact">
+                <span class="text-bold">Phone</span>
+                <span>(995) 597 105 879</span>
               </div>
-
+              <div class="single-contact">
+                <span class="text-bold">Address</span>
+                <span>13 Dolidze str, Tbilisi, Georgia</span>
+              </div>
+              <div class="single-contact">
+                <span class="text-bold">Age</span>
+                <span>23</span>
+              </div>
             </div>
           </div>
+
           <div class="social">
             <ul>
               <li><a href="https://github.com/grosto"><i class="fa fa-github"></i></a></li>
@@ -285,13 +258,6 @@
       </a>
     </footer>
     
-
-
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
