added resume to website

--- a/website/index.html
+++ b/website/index.html
@@ -72,7 +72,16 @@
           <li><a href="#about">About</a></li>
           <li><a href="#technical-skills">Skills</a></li>
           <li><a href="#work-experience">Exprience</a></li>
-          <li><a href="#footer">Download Résumé</a></li>
+          <li>
+            <a href="GiorgiRostomashviliResume.pdf">
+              Download Résumé
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/grosto/grosto.github.io">
+              View Source
+            </a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -101,15 +110,15 @@
               </div>
               <div class="single-contact">
                 <span class="text-bold">Phone</span>
-                <span>(995) 597 105 879</span>
+                <span>+32-487-57-08-16</span>
               </div>
               <div class="single-contact">
                 <span class="text-bold">Address</span>
-                <span>13 Dolidze str, Tbilisi, Georgia</span>
+                <span>Leuven, Belgium</span>
               </div>
               <div class="single-contact">
                 <span class="text-bold">Age</span>
-                <span>23</span>
+                <span>25</span>
               </div>
             </div>
           </div>
@@ -127,7 +136,7 @@
               ></a>
             </li>
             <li>
-              <a href="https://twitter.com/RostoG"
+              <a href="https://twitter.com/rostog"
                 ><i class="fa fa-twitter"></i
               ></a>
             </li>
@@ -153,61 +162,61 @@
           <div class="skills">
             <div class="row">
               <div class="single-skill">
-                <span>Javascript(ES 2016)</span>
-                <div class="meter">
-                  <span style="width: 90%"></span>
-                </div>
-              </div>
-              <div class="single-skill">
-                <span>Meteor</span>
-                <div class="meter">
-                  <span style="width: 80%"></span>
-                </div>
-              </div>
-              <div class="single-skill">
-                <span>Node.js</span>
-                <div class="meter">
-                  <span style="width: 78%"></span>
-                </div>
-              </div>
-              <div class="single-skill">
-                <span>React</span>
-                <div class="meter">
-                  <span style="width: 87%"></span>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="single-skill">
-                <span>jQuery</span>
+                <span>Javascript(ES7+)</span>
                 <div class="meter">
                   <span style="width: 95%"></span>
                 </div>
               </div>
               <div class="single-skill">
-                <span>Bootstrap</span>
+                <span>React/Redux</span>
                 <div class="meter">
-                  <span style="width: 99%"></span>
+                  <span style="width: 95%"></span>
                 </div>
               </div>
               <div class="single-skill">
-                <span>SASS/CSS</span>
+                <span>Node.js/Express</span>
                 <div class="meter">
-                  <span style="width: 94%"></span>
+                  <span style="width: 85%"></span>
                 </div>
               </div>
               <div class="single-skill">
-                <span>HTML5</span>
+                <span>React Native</span>
                 <div class="meter">
-                  <span style="width: 90%"></span>
+                  <span style="width: 70%"></span>
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="single-skill">
-                <span>Mocha/chai</span>
+                <span>DevOps (AWS/Docker)</span>
+                <div class="meter">
+                  <span style="width: 50%"></span>
+                </div>
+              </div>
+              <div class="single-skill">
+                <span>HTML5/CSS3</span>
+                <div class="meter">
+                  <span style="width: 90%"></span>
+                </div>
+              </div>
+              <div class="single-skill">
+                <span>Sass</span>
+                <div class="meter">
+                  <span style="width: 80%"></span>
+                </div>
+              </div>
+              <div class="single-skill">
+                <span>JS Tooling</span>
                 <div class="meter">
                   <span style="width: 65%"></span>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="single-skill">
+                <span>MongoDB</span>
+                <div class="meter">
+                  <span style="width: 70%"></span>
                 </div>
               </div>
               <div class="single-skill">
@@ -217,15 +226,15 @@
                 </div>
               </div>
               <div class="single-skill">
-                <span>Angular</span>
+                <span>Haskell</span>
                 <div class="meter">
-                  <span style="width: 75%"></span>
+                  <span style="width: 35%"></span>
                 </div>
               </div>
               <div class="single-skill">
-                <span>MongoDB</span>
+                <span>Python3</span>
                 <div class="meter">
-                  <span style="width: 70%"></span>
+                  <span style="width: 30%"></span>
                 </div>
               </div>
             </div>
@@ -243,21 +252,16 @@
               <span class="timeline-point"></span>
               <div class="timeline-block-content">
                 <div class="company-name">
-                  <h5>Palatine Analytics</h5>
-                  <span class="date">May 2016 - Present</span>
+                  <h5>DeltaLedger</h5>
+                  <span class="date">August 2017 - Present</span>
                 </div>
                 <h6>Full-Stack Developer</h6>
                 <p>
-                  Palatine Analytics is an Harvard based startup, which created
-                  an advanced employee evaluation software that enables
-                  companies to improve performance reviews
-                </p>
-                <p>
-                  I designed and built their public website, which is fully
-                  responsive and incorporates modern design features. Currently,
-                  I am working on product improvement, adding new features,
-                  testing and fixing bugs. Most of the coding is done in latest
-                  Javascript (ES6) using full-stack Meteor framework
+                  DeltaLedger is a Belgium based company, for which I am
+                  developing various blockchain-based applications. Other than
+                  standard web stack(React, Nodejs, MongoDB), I specialized in
+                  Ethereum’s Solidity language and worked on several projects
+                  using React Native.
                 </p>
               </div>
             </div>
@@ -266,17 +270,14 @@
               <div class="timeline-block-content">
                 <div class="company-name">
                   <h5>Continental City Loan</h5>
-                  <span class="date">August 2016 - Present</span>
+                  <span class="date">August 2016 - April 2017</span>
                 </div>
                 <h6>Full-Stack Developer</h6>
                 <p>
-                  Continental City Loan is a leading micro-finance company in
-                  Georgia, which is also present in Ukraine and Kazakhstan.
-                </p>
-                <p>
-                  I built three fully responsive websites for the company,
-                  Currently, I am working on server-side optimization for their
-                  credit management module.
+                  Continental City Loan is a leading microfinance company in
+                  Georgia, which is also present in Ukraine and Kazakhstan. I
+                  built three fully responsive websites for the company. Also
+                  worked on their core software rewrite.
                 </p>
               </div>
             </div>
@@ -284,13 +285,16 @@
               <span class="timeline-point"></span>
               <div class="timeline-block-content">
                 <div class="company-name">
-                  <h5>Freelancer</h5>
-                  <span class="date">May 2016 - Present</span>
+                  <h5>Palatine Analytics</h5>
+                  <span class="date">May 2016 - September 2017</span>
                 </div>
                 <h6>Full-Stack Developer</h6>
                 <p>
-                  I work on freelance projects on regular basis, mostly using
-                  NodeJs/Meteor and React.
+                  Palatine Analytics is a Harvard based startup, which created
+                  an advanced employee evaluation software that enables
+                  companies to improve performance reviews. I designed and built
+                  the company's public website. The codebase is written in the
+                  latest Javascript(ES6) using a full-stack Meteor framework.
                 </p>
               </div>
             </div>
@@ -298,13 +302,6 @@
         </div>
       </div>
     </section>
-
-    <footer id="footer">
-      <a href="GiorgiRostomashviliResume.pdf" class="btn-download">
-        Download Résumé <i class="fa fa-download"></i>
-      </a>
-    </footer>
-
     <script src="js/script.js"></script>
   </body>
 </html>
