--- a/website/index.html
+++ b/website/index.html
@@ -252,12 +252,12 @@
               <span class="timeline-point"></span>
               <div class="timeline-block-content">
                 <div class="company-name">
-                  <h5>DeltaLedger</h5>
-                  <span class="date">August 2017 - Present</span>
+                  <h5>Sofitto</h5>
+                  <span class="date">April 2017 - Present</span>
                 </div>
                 <h6>Full-Stack Developer</h6>
                 <p>
-                  DeltaLedger is a Belgium based company, for which I am
+                  Sofitto is a Belgium based company, for which I am
                   developing various blockchain-based applications. Other than
                   standard web stack(React, Nodejs, MongoDB), I specialized in
                   Ethereum’s Solidity language and worked on several projects
