updated work experience

--- a/website/index.html
+++ b/website/index.html
@@ -162,13 +162,7 @@
           <div class="skills">
             <div class="row">
               <div class="single-skill">
-                <span>Javascript(ES7+)</span>
-                <div class="meter">
-                  <span style="width: 95%"></span>
-                </div>
-              </div>
-              <div class="single-skill">
-                <span>React/Redux</span>
+                <span>Javascript(ES7+)/Typescript</span>
                 <div class="meter">
                   <span style="width: 95%"></span>
                 </div>
@@ -180,7 +174,13 @@
                 </div>
               </div>
               <div class="single-skill">
-                <span>React Native</span>
+                <span>React/React Native</span>
+                <div class="meter">
+                  <span style="width: 95%"></span>
+                </div>
+              </div>
+              <div class="single-skill">
+                <span>GraphQL</span>
                 <div class="meter">
                   <span style="width: 70%"></span>
                 </div>
@@ -188,41 +188,41 @@
             </div>
             <div class="row">
               <div class="single-skill">
-                <span>DevOps (AWS/Docker)</span>
+                <span>DevOps (AWS/Docker/k8s)</span>
                 <div class="meter">
-                  <span style="width: 50%"></span>
+                  <span style="width: 60%"></span>
                 </div>
               </div>
               <div class="single-skill">
-                <span>HTML5/CSS3</span>
+                <span>HTML/CSS/Sass</span>
                 <div class="meter">
                   <span style="width: 90%"></span>
                 </div>
               </div>
               <div class="single-skill">
-                <span>Sass</span>
+                <span>Tooling (Parcel/Babel)</span>
                 <div class="meter">
-                  <span style="width: 80%"></span>
+                  <span style="width: 65%"></span>
                 </div>
               </div>
               <div class="single-skill">
-                <span>JS Tooling</span>
+                <span>MongoDB/SQL</span>
                 <div class="meter">
-                  <span style="width: 65%"></span>
+                  <span style="width: 70%"></span>
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="single-skill">
-                <span>MongoDB</span>
-                <div class="meter">
-                  <span style="width: 70%"></span>
-                </div>
-              </div>
-              <div class="single-skill">
                 <span>Git and Github</span>
                 <div class="meter">
                   <span style="width: 80%"></span>
+                </div>
+              </div>
+              <div class="single-skill">
+                <span>Rust</span>
+                <div class="meter">
+                  <span style="width: 30%"></span>
                 </div>
               </div>
               <div class="single-skill">
@@ -252,16 +252,33 @@
               <span class="timeline-point"></span>
               <div class="timeline-block-content">
                 <div class="company-name">
-                  <h5>Sofitto</h5>
-                  <span class="date">April 2017 - Present</span>
+                  <h5>Full-Stack Developer</h5>
+                  <span class="date">June 2019 - Present</span>
                 </div>
                 <h6>Full-Stack Developer</h6>
                 <p>
-                  Sofitto is a Belgium based company, for which I am
-                  developing various blockchain-based applications. Other than
-                  standard web stack(React, Nodejs, MongoDB), I specialized in
-                  Ethereum’s Solidity language and worked on several projects
-                  using React Native.
+                  In The Pocket is a leading digital studio in Belgium. I am
+                  working on products for several popular Belgian apps and
+                  websites with eclectic tech stack. Throughout my time here I
+                  have created products with Nodejs, React, React Native, Go,
+                  .NET, Python, Docker, and Kubernetes.
+                </p>
+              </div>
+            </div>
+            <div class="timeline-block">
+              <span class="timeline-point"></span>
+              <div class="timeline-block-content">
+                <div class="company-name">
+                  <h5>Sofitto</h5>
+                  <span class="date">April 2017 - May 2019</span>
+                </div>
+                <h6>Full-Stack Developer</h6>
+                <p>
+                  Sofitto is a Belgium based company, for which I am developing
+                  various blockchain-based applications. Other than standard web
+                  stack(React, Nodejs, MongoDB), I specialized in Ethereum’s
+                  Solidity language and worked on several projects using React
+                  Native.
                 </p>
               </div>
             </div>
