--- a/website/index.html
+++ b/website/index.html
@@ -14,7 +14,9 @@
       content="Giorgi Rostomashvili, Giorgi, Rostomashvili, GiorgiRostomashvili.com, Freelance, Web Developer, Personal Website, Javascript, Full-Stack, Developer"
     />
 
-    <title>Giorgi Rostomashvili - Web Developer</title>
+    <title>Giorgi Rostomashvili - Software Engineer</title>
+
+    <link rel="preload" as="script" href="/index.js" crossorigin />
 
     <link rel="icon" sizes="16x16 32x32" href="/img/favicon.ico" />
 
@@ -27,7 +29,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     />
 
-    <link rel="stylesheet" href="sass/main.scss" />
+    <link rel="stylesheet" href="/main.css" />
     <script>
       (function(i, s, o, g, r, a, m) {
         i["GoogleAnalyticsObject"] = r;
@@ -56,7 +58,7 @@
     <header>
       <div class="introduction">
         <h1>Hi, My Name is Giorgi</h1>
-        <h3>Web Developer</h3>
+        <h3>Software Engineer</h3>
         <a href="#about"><i class="fa fa-arrow-circle-down"></i></a>
       </div>
     </header>
@@ -252,7 +254,7 @@
               <span class="timeline-point"></span>
               <div class="timeline-block-content">
                 <div class="company-name">
-                  <h5>Full-Stack Developer</h5>
+                  <h5>In The Pocket</h5>
                   <span class="date">June 2019 - Present</span>
                 </div>
                 <h6>Full-Stack Developer</h6>
@@ -319,6 +321,6 @@
         </div>
       </div>
     </section>
-    <script src="js/script.js"></script>
+    <script type="module" src="/index.js"></script>
   </body>
 </html>
